# SeismicPrediction

./: README.md
App/: Cutremure.csv
PaGUI/: CMakeLists.txt  Cutremur.h  Predictie_Cutremure.c  main.c
